Added UI features, actions
Added settings wheel, flip board, and flip turn buttons. Added the new
subaction types: RelativeLineMoveAndCaptureAction,
RelativeSegmentMoveAndCaptureAction, LineSummonAction