@@ -1,7 +1,6 @@
 package chess.base;
 
 import javafx.application.Platform;
-import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
 import javafx.scene.shape.Shape;
 
@@ -70,6 +69,6 @@ public class LegalMoveAndCapture extends LegalAction{
 
 	@Override
 	public String getDescription() {
-		return "Move and Capture on tile (%d, %d)".formatted(destRow, destCol);
+		return String.format("Move and Capture on tile (%d, %d)", destRow, destCol);
 	}
 }
